# oop_lab_three

./: CMakeLists.txt  README.md
include/: figure.hpp  figure_array.hpp  geometry.hpp  pentagon.hpp  rhombus.hpp  trapezoid.hpp
src/: figure.cpp  figure_array.cpp  geometry.cpp  main.cpp  pentagon.cpp  rhombus.cpp  trapezoid.cpp
tests/: figure_tests.cpp
